[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylts"
version = "0.2.0"
description = "Linguistic Time Series Forecasting based on Hedge Algebras"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Nguyen Duy Hieu", email = "hieu3210@gmail.com" }]
keywords = ["time-series", "forecasting", "fuzzy", "hedge-algebras", "linguistic"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
pylts = "lts.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
